--- a/sa_page/templates/businesscard.html
+++ b/sa_page/templates/businesscard.html
@@ -1,4 +1,138 @@
+{% extends 'sa_base.html' %}
 {% load static %}
+{% block title %}SA攻略_數位名片{% endblock title %}
+{% block Content %}
+    <div class="submenu">
+        <ol>
+            <li class="active namecard"><a href="#"><div class="menu-item"><span>數位名片1.0</span></div></a></li>
+            <li class="community"><a href="/sa/functionintro/community/"><div class="menu-item"><span>社區檔案櫃</span></div></a></li>
+            <li class="sellingprocess"><a href="/sa/functionintro/sellingprocess/"><div class="menu-item"><span>買方服務流程</span></div></a></li>
+        </ol>
+    </div>
+    <div class="rightcolumn">
+        {% block Breadcrumbs %}
+            <div class="horizontalstyle">
+                <div class="nav-container">
+                    <div class="top">
+                        <a href="/sa/" class="logo black"></a>
+
+                        <a href="/sa/#" class="hidden-button" data-toggle-trial></a>
+                        <h2>SA攻略</h2>
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb">
+                                <li class="breadcrumb-item"><a href="/sa/">首頁</a></li>
+                                <li class="breadcrumb-item active" aria-current="page">SA攻略 - 數位名片1.0</li>
+                            </ol>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        {% endblock Breadcrumbs %}
+
+        <div class="content">
+            <section class="funcintro-intro">
+                <div class="container">
+                    <div class="row" >
+                        <div class="funcintro-sectitle">
+                            <h2 class="center">數位名片1.0版上線囉 !</h2>
+                            <div class="scrolldownarrow"></div>
+                        </div>
+                        <div class="funcintro-block">
+                            <h3 class="center">分享到社群，多元管道助攻</h3>
+                            <p class="center">社群傳播提升能見度，榮耀成就數位化展現經營實力！</p>
+                            <img src="{% static 'assets/img/functionintro/namecard-intro-1.svg' %}" />
+                        </div>
+                        <div class="funcintro-block">
+                            <h3 class="center">開啟名片一鍵加Line，不錯過任何機會</h3>
+                            <p class="center">最大化留下客戶聯絡方式</p>
+                            <img src="{% static 'assets/img/functionintro/namecard-intro-2.svg' %}" />
+                        </div>
+                        <div class="funcintro-block">
+                            <h3 class="center">QR code 一掃即看，擴大線上線下客戶圈</h3>
+                            <p class="center">最大化留下客戶聯絡方式</p>
+                            <img src="{% static 'assets/img/functionintro/namecard-intro-3.svg' %}" />
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="funcintro-qa">
+
+                <div class="container">
+
+                    <div class="row">
+
+                        <div class="qasliderow" id="qasliderow-namecard">
+                            <h3 class="center">常見問題集</h3>
+                            <ol>
+                                <li>
+                                    <div class="title">如何分享？</div>
+                                    <div class="answer">
+                                        <div class="textbox">
+                                        點擊我的數位名片右方的<strong>QR code按鈕</strong>進入數位名片頁面，再點擊右上方<strong>分享</strong>，即可將個人數位名片分享給您的LINE好友，或是個人社群媒體如
+                                        Facebook、Instagram等。
+                                        </div>
+                                        <div class="imagebox">
+                                            <img src="{% static 'assets/img/functionintro/namecard-answer-1.png' %}" alt="點擊我的數位名片右方的QR code按鈕進入數位名片頁面，再點擊右上方分享，即可將個人數位名片分享給您的LINE好友，或是個人社群媒體如
+                                            Facebook、Instagram等">
+                                        </div>
+
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="title">如何預覽？</div>
+                                    <div class="answer">
+                                        <div class="textbox">
+                                            點擊我的數位名片右方的<strong>數位名片檢視</strong>，即可在SA內檢視分享給客戶的數位名片內容。
+                                        </div>
+                                        <div class="imagebox">
+                                            <img src="{% static 'assets/img/functionintro/namecard-answer-2.png' %}" alt="點擊我的數位名片右方的數位名片檢視，即可在SA內檢視分享給客戶的數位名片內容。">
+                                        </div>
+
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="title">如何設定LINE加好友?</div>
+
+                                    <div class="answer">
+                                        <div class="textbox">
+                                            在個人LINE中找到自己的行動條碼，點擊下方的複製連結後，再到SA我的數位名片右方的<strong>設定</strong>中，連入您的LINE加好友連結，存檔後即可在數位名片頁顯示<strong>LINE加好友</strong>的功能囉！
+                                        </div>
+                                        <div class="imagebox">
+                                            <img src="{% static 'assets/img/functionintro/namecard-answer-3.png' %}" alt="在個人LINE中找到自己的行動條碼，點擊下方的複製連結後，再到SA我的數位名片右方的設定中，連入您的LINE加好友連結，存檔後即可在數位名片頁顯示LINE加好友的功能囉！">
+                                        </div>
+
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="title">數位名片1.0總覽</div>
+
+                                    <div class="answer">
+                                        <div class="textbox">
+
+                                        </div>
+                                        <div class="imagebox">
+                                            <img src="{% static 'assets/img/functionintro/namecard-answer-4_1.png' %}" alt="數位名片1.0總覽-簡介">
+                                            <img src="{% static 'assets/img/functionintro/namecard-answer-4_2.png' %}" alt="數位名片1.0總覽-獎項">
+                                        </div>
+
+                                    </div>
+                                </li>
+                            </ol>
+                        </div>
+
+
+
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
+{% endblock Content %}
+{% block fixedblock %}
+    {% include 'elements/fixeddownloadblock.html' %}
+{% endblock fixedblock %}
+{% comment %} {% load static %}
+
 <!doctype html>
 <html lang="zh">
 
@@ -77,14 +211,15 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-ML8B9HB"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+
     <header class="menu-open">
         <div class="background" data-toggle-menu></div>
 
         <div class="nav-container">
             <div class="top">
                 <a href="/sa/" class="logo"></a>
-               
-                <nav class="main">   
+
+                <nav class="main">
                     <a href="/sa/" class="nav-link" data-trigger-page-transition><span class="text">首頁</span> <span class="line"></span></a>
                     <a href="/sa/events/" class="nav-link" data-trigger-page-transition><span class="newtag">NEW</span><span class="text" target="_blank">活動快訊</span> <span class="line"></span></a>
                     <a href="/sa/functionintro/" class="nav-link" data-trigger-page-transition><span class="text">SA攻略</span> <span class="line"></span></a>
@@ -138,12 +273,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
     </header>
 
-
-   
-
-
     <div class="wrapper">
- 
+
             <div class="submenu">
                 <ol>
                     <li class="active namecard"><a href="#"><div class="menu-item"><span>數位名片1.0</span></div></a></li>
@@ -167,7 +298,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             </nav>
                         </div>
                     </div>
-            
+
                 </div>
                 <div class="content">
                     <section class="funcintro-intro">
@@ -186,19 +317,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     <h3 class="center">開啟名片一鍵加Line，不錯過任何機會</h3>
                                     <p class="center">最大化留下客戶聯絡方式</p>
                                     <img src="{% static 'assets/img/functionintro/namecard-intro-2.svg' %}" />
-                                </div> 
+                                </div>
                                 <div class="funcintro-block">
                                     <h3 class="center">QR code 一掃即看，擴大線上線下客戶圈</h3>
                                     <p class="center">最大化留下客戶聯絡方式</p>
                                     <img src="{% static 'assets/img/functionintro/namecard-intro-3.svg' %}" />
-                                </div> 
+                                </div>
                             </div>
                         </div>
                     </section>
                     <section class="funcintro-qa">
 
                         <div class="container">
-                            
+
                             <div class="row">
 
                                 <div class="qasliderow" id="qasliderow-namecard">
@@ -215,7 +346,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                     <img src="{% static 'assets/img/functionintro/namecard-answer-1.png' %}" alt="點擊我的數位名片右方的QR code按鈕進入數位名片頁面，再點擊右上方分享，即可將個人數位名片分享給您的LINE好友，或是個人社群媒體如
                                                     Facebook、Instagram等">
                                                 </div>
-                                                
+
                                             </div>
                                         </li>
                                         <li>
@@ -227,12 +358,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 <div class="imagebox">
                                                     <img src="{% static 'assets/img/functionintro/namecard-answer-2.png' %}" alt="點擊我的數位名片右方的數位名片檢視，即可在SA內檢視分享給客戶的數位名片內容。">
                                                 </div>
-                                                
+
                                             </div>
                                         </li>
                                         <li>
                                             <div class="title">如何設定LINE加好友?</div>
-                                            
+
                                             <div class="answer">
                                                 <div class="textbox">
                                                     在個人LINE中找到自己的行動條碼，點擊下方的複製連結後，再到SA我的數位名片右方的<strong>設定</strong>中，連入您的LINE加好友連結，存檔後即可在數位名片頁顯示<strong>LINE加好友</strong>的功能囉！
@@ -240,32 +371,32 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 <div class="imagebox">
                                                     <img src="{% static 'assets/img/functionintro/namecard-answer-3.png' %}" alt="在個人LINE中找到自己的行動條碼，點擊下方的複製連結後，再到SA我的數位名片右方的設定中，連入您的LINE加好友連結，存檔後即可在數位名片頁顯示LINE加好友的功能囉！">
                                                 </div>
-                                                
+
                                             </div>
                                         </li>
                                         <li>
                                             <div class="title">數位名片1.0總覽</div>
-                                            
+
                                             <div class="answer">
                                                 <div class="textbox">
-                                                   
+
                                                 </div>
                                                 <div class="imagebox">
                                                     <img src="{% static 'assets/img/functionintro/namecard-answer-4_1.png' %}" alt="數位名片1.0總覽-簡介">
                                                     <img src="{% static 'assets/img/functionintro/namecard-answer-4_2.png' %}" alt="數位名片1.0總覽-獎項">
                                                 </div>
-                                                
+
                                             </div>
                                         </li>
                                     </ol>
                                 </div>
-            
-                              
-            
+
+
+
                             </div>
                         </div>
-            
-            
+
+
                     </section>
                 </div>
             </div>
@@ -283,8 +414,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             1.「數位名片」：自我介紹文字編輯<br>
                             2.「意見回饋」
                         </strong></p>
-                        
-    
+
+
                     </div>
                     <div class="block-footer">
                         <!-- <a href="#" class="blockbtns">我要回饋</a> -->
@@ -295,15 +426,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                 </div>
             </div>
-
-
-
-
-
-
-
-
-
 
         <footer>
             <div class="inner">
@@ -327,7 +449,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a href="/sa/voting/" class="nav-link" data-trigger-page-transition><span class="text">點讚GO!</span> <span class="line"></span></a>
                         <a href="https://sinyi-superagent-webapp-uscmmvx6lq-de.a.run.app/sa_index.html" target="_blank" class="nav-link" ><span class="text">手刀下載</span> <span
                             class="line"></span></a>
-                    
+
                     </nav>
 
                     <div class="right">
@@ -393,4 +515,4 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 </body>
 
-</html>
+</html> {% endcomment %}
