--- a/sa_page/templates/community.html
+++ b/sa_page/templates/community.html
@@ -74,6 +74,8 @@
             <li class="namecard"><a href="/sa/functionintro/businesscard/"><div class="menu-item"><span>數位名片1.0</span></div></a></li>
             <li class="active community"><a href="#"><div class="menu-item"><span>社區檔案櫃</span></div></a></li>
             <li class="sellingprocess"><a href="/sa/functionintro/sellingprocess/"><div class="menu-item"><span>買方服務流程</span></div></a></li>
+            <li class="sellingprocess newtag"><a href="/sa/functionintro/customertagfilter/"><div class="menu-item"><span>客戶標籤應用</span></div></a></li>
+            <li class="productcart newtag"><a href="/sa/functionintro/productcart/"><div class="menu-item"><span>案源購物車</span></div></a></li>
         </ol>
     </div>
     <div class="rightcolumn">
@@ -382,7 +384,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                 <nav class="main">
                     <a href="/sa/" class="nav-link" data-trigger-page-transition><span class="text">首頁</span> <span class="line"></span></a>
-                    <a href="/sa/events/" class="nav-link" data-trigger-page-transition><span class="newtag">NEW</span><span class="text" target="_blank">活動快訊</span> <span class="line"></span></a>
+                    <a href="/sa/events/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">活動快訊</span> <span class="line"></span></a>
                     <a href="/sa/functionintro/" class="nav-link" data-trigger-page-transition><span class="text">SA攻略</span> <span class="line"></span></a>
                     <a href="/sa/pd_data/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">產品熱度</span> <span class="line"></span></a>
                     <a href="/sa/voting/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">點讚GO!</span> <span class="line"></span></a>
@@ -441,6 +443,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <li class="namecard"><a href="/sa/functionintro/businesscard/"><div class="menu-item"><span>數位名片1.0</span></div></a></li>
                     <li class="active community"><a href="#"><div class="menu-item"><span>社區檔案櫃</span></div></a></li>
                     <li class="sellingprocess"><a href="/sa/functionintro/sellingprocess/"><div class="menu-item"><span>買方服務流程</span></div></a></li>
+                    <li class="sellingprocess newtag"><a href="/sa/functionintro/customertagfilter/"><div class="menu-item"><span>客戶標籤應用</span></div></a></li>
+                    <li class="productcart newtag"><a href="/sa/functionintro/productcart/"><div class="menu-item"><span>案源購物車</span></div></a></li>
                 </ol>
             </div>
             <div class="rightcolumn">
@@ -450,7 +454,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <a href="/sa/" class="logo black"></a>
 
                             <a href="/sa/#" class="hidden-button" data-toggle-trial></a>
-                            <h2>SA攻略</h2>
+                            <h2>SA攻略123455</h2>
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item"><a href="/sa/">首頁</a></li>
@@ -466,7 +470,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="container">
                             <div class="row" >
                                 <div class="funcintro-sectitle">
-                                    <h2 class="center">社區檔案櫃上線囉 !</h2>
+                                    <h2 class="center">社區檔案櫃上線囉123456789 !</h2>
                                     <div class="scrolldownarrow"></div>
                                 </div>
                                 <div class="funcintro-block greenbg nopaddingbottom">
