--- a/sa_page/templates/elements/fixeddownloadblock.html
+++ b/sa_page/templates/elements/fixeddownloadblock.html
@@ -4,19 +4,19 @@
     <!-- <div id="fixedblock-toggle-btn"><span class="close"></span></div> -->
     <div class="block-body">
         <div class="block-title">
-            <h4><strong>Super Agent </strong>v0.7.0 有新功能囉！</h4>
+            <!-- <h4><strong>Super Agent </strong>v0.8.0 有新功能囉！</h4> -->
         </div>
         <div class="block-body">
-            <p>數位名片再進化，自我介紹隨我編！分享FB再送限定黑卡版數位名片～<br>對SA有任何想說的話，都歡迎使用APP內回饋功能告訴開發團隊唷～<br>這次更新：</p>
+            <!-- <p>數位名片再進化，自我介紹隨我編！分享FB再送限定黑卡版數位名片～<br>對SA有任何想說的話，都歡迎使用APP內回饋功能告訴開發團隊唷～<br>這次更新：</p>
             <p><strong>
                 1.「數位名片」：自我介紹文字編輯<br>
                 2.「意見回饋」
-            </strong></p>
+            </strong></p> -->
         </div>
         <div class="block-footer">
             <!-- <a href="#" class="blockbtns">我要回饋</a> -->
             <!-- <a href="#" class="blockbtns">下載體驗</a> -->
-            <div class="qrcode"><img src="{% static 'assets/img/sa-download.png' %}"></div>
+            <!-- <div class="qrcode"><img src="{% static 'assets/img/sa-download.png' %}"></div>
             {% comment %} <p class="note"><strong>[ 僅提供 iPhone 手機夥伴下載 ]</strong><br><br> 由於產品團隊採用敏捷式開發，為快速回應需求與動態調整迭代，SA發展過程中將優先鎖定iOS進行開發，請持有iPhone手機夥伴，踴躍下載搶先體驗！
             </p> {% endcomment %}
             <p class="note"><strong>[ 目前僅支援 iOS 下載 ]</strong><br><br>轉型辦公室近期推出的SuperAgent
@@ -24,7 +24,7 @@
                 目前還在<strong>嘗試創新階段</strong>，初步功能發展中，
                 在規劃設計上還有很多需要<strong>持續完備</strong>，
                 開發團隊希望先<strong>聚焦集中火力</strong>找到對的方向，
-                因此會以使用人數<strong>近九成的iOS系統</strong>來開發。</p>
+                因此會以使用人數<strong>近九成的iOS系統</strong>來開發。</p> -->
         </div>
     </div>
 </div>
