--- a/sa_page/templates/elements/navigation.html
+++ b/sa_page/templates/elements/navigation.html
@@ -9,8 +9,12 @@
 
                 <nav class="main">
                     <a href="/sa/" class="nav-link" data-trigger-page-transition><span class="text">首頁</span> <span class="line"></span></a>
-                    <a href="/sa/events/" class="nav-link" data-trigger-page-transition><span class="newtag">NEW</span><span class="text" target="_blank">活動快訊</span> <span class="line"></span></a>
-                    <a href="/sa/functionintro/" class="nav-link" data-trigger-page-transition><span class="text">SA攻略</span> <span class="line"></span></a>
+                    <a href="/sa/events/" class="nav-link" data-trigger-page-transition>
+                        <!-- <span class="newtag">NEW</span> -->
+                        <span class="text" target="_blank">活動快訊</span> <span class="line"></span></a>
+                    <a href="/sa/functionintro/" class="nav-link" data-trigger-page-transition>
+                        <span class="newtag">NEW</span>
+                        <span class="text">SA攻略</span> <span class="line"></span></a>
                     <a href="/sa/pd_data/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">產品熱度</span> <span class="line"></span></a>
                     <a href="/sa/voting/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">點讚GO!</span> <span class="line"></span></a>
                     <a href="https://sinyi-superagent-webapp-uscmmvx6lq-de.a.run.app/sa_index.html" target="_blank" class="nav-link" ><span class="text" target="_blank">手刀下載</span> <span class="line"></span></a>
