--- a/sa_page/templates/sellingprocess.html
+++ b/sa_page/templates/sellingprocess.html
@@ -68,6 +68,8 @@
             <li class="namecard"><a href="/sa/functionintro/businesscard/"><div class="menu-item"><span>數位名片1.0</span></div></a></li>
             <li class="community"><a href="/sa/functionintro/community/"><div class="menu-item"><span>社區檔案櫃</span></div></a></li>
             <li class="active sellingprocess"><a href="#"><div class="menu-item"><span>買方服務流程</span></div></a></li>
+            <li class="sellingprocess newtag"><a href="/sa/functionintro/customertagfilter/"><div class="menu-item"><span>客戶標籤應用</span></div></a></li>
+            <li class="productcart newtag"><a href="/sa/functionintro/productcart/"><div class="menu-item"><span>案源購物車</span></div></a></li>
         </ol>
     </div>
     <div class="rightcolumn">
@@ -435,6 +437,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <li class="namecard"><a href="/sa/functionintro/businesscard/"><div class="menu-item"><span>數位名片1.0</span></div></a></li>
                     <li class="community"><a href="/sa/functionintro/community/"><div class="menu-item"><span>社區檔案櫃</span></div></a></li>
                     <li class="active sellingprocess"><a href="#"><div class="menu-item"><span>買方服務流程</span></div></a></li>
+                    <li class="sellingprocess newtag"><a href="/sa/functionintro/customertagfilter/"><div class="menu-item"><span>客戶標籤應用</span></div></a></li>
+                    <li class="productcart newtag"><a href="/sa/functionintro/productcart/"><div class="menu-item"><span>案源購物車</span></div></a></li>
                 </ol>
             </div>
             <div class="rightcolumn">
