--- a/sa_page/templates/businesscard.html
+++ b/sa_page/templates/businesscard.html
@@ -82,6 +82,8 @@
             <li class="active namecard"><a href="#"><div class="menu-item"><span>數位名片1.0</span></div></a></li>
             <li class="community"><a href="/sa/functionintro/community/"><div class="menu-item"><span>社區檔案櫃</span></div></a></li>
             <li class="sellingprocess"><a href="/sa/functionintro/sellingprocess/"><div class="menu-item"><span>買方服務流程</span></div></a></li>
+            <li class="sellingprocess newtag"><a href="/sa/functionintro/customertagfilter/"><div class="menu-item"><span>客戶標籤應用</span></div></a></li>
+            <li class="productcart newtag"><a href="/sa/functionintro/productcart/"><div class="menu-item"><span>案源購物車</span></div></a></li>
         </ol>
     </div>
     <div class="rightcolumn">
@@ -397,6 +399,8 @@
                     <li class="active namecard"><a href="#"><div class="menu-item"><span>數位名片1.0</span></div></a></li>
                     <li class="community"><a href="/sa/functionintro/community/"><div class="menu-item"><span>社區檔案櫃</span></div></a></li>
                     <li class="sellingprocess"><a href="/sa/functionintro/sellingprocess/"><div class="menu-item"><span>買方服務流程</span></div></a></li>
+                    <li class="sellingprocess newtag"><a href="#"><div class="menu-item"><span>客戶標籤應用</span></div></a></li>
+                    <li class="productcart newtag"><a href="#"><div class="menu-item"><span>案源購物車</span></div></a></li>
                 </ol>
             </div>
             <div class="rightcolumn">
